Added personal keys, updated client for API

--- a/config/database.yml
+++ b/config/database.yml
@@ -12,6 +12,8 @@ default: &default
 development:
   <<: *default
   database: 'easycomm_development'
+  username: 'ltbul'
+  password: 'Helixscottie1'
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -19,7 +21,11 @@ development:
 test:
   <<: *default
   database: 'easycomm_test'
+  username: 'ltbul'
+  password: 'Helixscottie1'
 
 production:
   <<: *default
   database: 'easycomm_production'
+  username: 'ltbul'
+  password: 'Helixscottie1'
